--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
             <version>1.59</version>
         </dependency>
 
+        <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
