--- a/src/test/script/apns-extensions.cnf
+++ b/src/test/script/apns-extensions.cnf
@@ -15,9 +15,9 @@ keyUsage = critical, digitalSignature, keyEncipherment
 extendedKeyUsage = clientAuth, serverAuth
 
 [ apns_topics ]
-aps_topics.0 = UTF8String:com.relayrides.pushy
+aps_topics.0 = UTF8String:com.eatthepath.pushy
 aps_topics.1 = SEQWRAP,UTF8String:app
-aps_topics.2 = UTF8String:com.relayrides.pushy.voip
+aps_topics.2 = UTF8String:com.eatthepath.pushy.voip
 aps_topics.3 = SEQWRAP,UTF8String:voip
-aps_topics.4 = UTF8String:com.relayrides.pushy.complication
+aps_topics.4 = UTF8String:com.eatthepath.pushy.complication
 aps_topics.5 = SEQWRAP,UTF8String:complication
